# Clumping_factor_calculations

./: .gitignore  README.md  environment-core.yml  environment.yml  pyproject.toml  requirements-core.txt  requirements-optional.txt  requirements-pylians.txt
.github/workflows/: ci.yml
AIDA-TNG_review/: AIDA-TNG_clumping_power_spectrum_review.md  aida-tng-clumping-power-spectrum-review.md
Legacy files/: DM_clumping_factor_cube.py  DM_clumping_factor_pylians.py  DM_clumping_factor_radius.py  Gas_clumping_factor.py  Gas_clumping_factor_cube.py  Gas_clumping_factor_pylians.py  Gas_clumping_factor_radius.py
comparative_implementations/: README.md
comparative_implementations/forest/: compute_tau.py  line_list.txt
docs/: AIDA-TNG_clumping_power_spectrum_review.md  paper_2511.09364_comparison.md  project_history.md
docs/AIDA-TNG_clumping_power_spectrum_review/: AIDA-TNG_clumping_power_spectrum_review.md
logs/: cf_dm_cube_256.out  cf_dm_cube_512.out  cf_dm_pylians_256.out  cf_dm_pylians_512.out  cf_dm_sphere_256.out  cf_dm_sphere_512.out  cf_gas_cube_256.out  cf_gas_cube_512.out  cf_gas_pylians_256.out  cf_gas_pylians_512.err  cf_gas_pylians_512.out  cf_gas_sphere_256.out  cf_gas_sphere_512.out
reports/: internship_report.tex
results/: README.md  dm_cube_1024.json  dm_cube_512.json  dm_pylians_1024.json  gas_cube_256.json  gas_cube_512.json  gas_pylians_256.json  gas_pylians_512.json
results/Thesan-1-dm-pylians-grid-thread-scaling/: dm_pylians_snapshot081_grid128_threads16_batch10_run1.json  dm_pylians_snapshot081_grid128_threads8_batch10_run1.json  dm_pylians_snapshot081_grid256_threads16_batch10_run1.json  dm_pylians_snapshot081_grid256_threads1_batch10_run1.json  dm_pylians_snapshot081_grid256_threads4_batch10_run1.json  dm_pylians_snapshot081_grid256_threads8_batch10_run1.json  dm_pylians_snapshot081_grid512_threads16_batch10_run1.json  dm_pylians_snapshot081_grid512_threads1_batch10_run1.json  dm_pylians_snapshot081_grid512_threads4_batch10_run1.json  dm_pylians_snapshot081_grid512_threads8_batch10_run1.json
results/Thesan-1-dm-pylians-large-grid-thread-scaling/: dm_pylians_snapshot081_grid1024_threads2_batch10_run1.json  dm_pylians_snapshot081_grid1024_threads4_batch10_run1.json
results/Thesan-1-scaling/: gas_pylians_grid256_threads12_batch10_run1.json  gas_pylians_grid256_threads16_batch10_run2.json  gas_pylians_grid256_threads20_batch10_run2.json  gas_pylians_grid256_threads8_batch10.json  gas_sphere_grid256_threads16_batch10.json
results/Thesan-2-dm-pylians-grid-thread-scaling/: dm_pylians_snapshot080_grid128_threads16_batch10_run1.json  dm_pylians_snapshot080_grid128_threads4_batch10_run1.json  dm_pylians_snapshot080_grid128_threads8_batch10_run1.json  dm_pylians_snapshot080_grid256_threads1_batch10_run1.json  dm_pylians_snapshot080_grid256_threads2_batch10_run1.json  dm_pylians_snapshot080_grid256_threads8_batch10_run1.json  dm_pylians_snapshot080_grid512_threads1_batch10_run1.json  dm_pylians_snapshot080_grid512_threads2_batch10_run1.json
results/Thesan-2-dm-pylians-large-grid-thread-scaling/: dm_pylians_snapshot080_grid1024_threads16_batch10_run1.json  dm_pylians_snapshot080_grid1024_threads1_batch10_run1.json  dm_pylians_snapshot080_grid1024_threads4_batch10_run1.json  dm_pylians_snapshot080_grid1024_threads8_batch10_run1.json
results/tng100-3-t1/: gas_cube_128.json  (+4 more)
scripts/: README.md  alternative_clumping_evolution_job.pbs  clumping_evolution_job.pbs  clumping_job.pbs  density_ratio_job.pbs  equation_tests_job.pbs  ionized_sweep_job.pbs  organize_thesan_results.py  organize_tng_results.py  partial_job.pbs  plot_benchmark_results.py  power_spectrum_array_job.pbs  power_spectrum_job.pbs  smoke_job.pbs  smoke_matrix.sh  snapshot_job.pbs  submit_aida_ionized_sweep_jobs.sh  submit_aida_tng_jobs.sh  submit_aida_tng_power_spectrum_jobs.sh  submit_alternative_clumping_evolution_jobs.sh  submit_alternative_clumping_job.sh  submit_clumping_jobs.sh  submit_density_ratio_job.sh  submit_equation_tests_job.sh  submit_evolution_jobs.sh  submit_evolution_jobs.sh.bak  submit_partial_jobs.sh  submit_power_spectrum_jobs.sh  submit_smoke_jobs.sh  submit_snapshot_job.sh  submit_summary_jobs.sh  summary_job.pbs  validate_chunked_result.py
tests/: conftest.py  reference_ionizing.py  test_aida_tng_plotting.py  test_alternative_clumping.py  test_chunked_loading.py  test_cli.py  test_clumping.py  test_equation_story_plots.py  test_equation_tests.py  test_forest.py  test_grid.py  test_ionizing.py  test_masked_clumping.py  test_power_spectrum.py  test_power_spectrum_cli.py  test_preprocess.py  test_raw_gas.py  test_raw_transmission.py  test_results.py  test_snapshot_workflow.py  test_summary_cache.py  test_temperature.py  test_thesan_organizer.py  test_tng_organizer.py
(+1832 files in other folders)
