[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clumping-factor-calculations"
version = "0.1.0"
description = "Modular clumping factor calculations for TNG gas and dark matter data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
clumping-compute = "clumping_factor.cli:compute_main"
clumping-plot = "clumping_factor.cli:plot_main"
clumping-evolution-plot = "clumping_factor.cli:evolution_plot_main"
clumping-campaign-plot = "clumping_factor.cli:campaign_plot_main"
clumping-forest = "clumping_factor.forest.cli:forest_main"
clumping-factor-alternative = "clumping_factor.alternative_clumping_cli:alternative_clumping_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clumping_factor.forest" = ["data/line_list.txt"]
