[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clumping-factor-calculations"
version = "0.1.0"
description = "Modular clumping factor calculations for TNG gas and dark matter data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-setuptools",
]

[project.scripts]
clumping-compute = "clumping_factor.cli:compute_main"
clumping-eq5 = "clumping_factor.cli:eq5_main"
clumping-equation-tests = "clumping_factor.equation_tests_cli:equation_tests_main"
clumping-equation-tests-plot = "clumping_factor.equation_tests_cli:equation_tests_plot_main"
clumping-equation-story-plots = "clumping_factor.equation_story_plots:equation_story_plots_main"
clumping-equation-diagnostic-plots = "clumping_factor.equation_story_plots:equation_diagnostic_plots_main"
clumping-plot = "clumping_factor.cli:plot_main"
clumping-evolution-plot = "clumping_factor.cli:evolution_plot_main"
clumping-campaign-plot = "clumping_factor.cli:campaign_plot_main"
clumping-forest = "clumping_factor.forest.cli:forest_main"
clumping-ionizing = "clumping_factor.forest.ionizing_cli:ionizing_main"
clumping-factor-alternative = "clumping_factor.alternative_clumping_cli:alternative_clumping_main"
clumping-factor-alternative-plot = "clumping_factor.alternative_clumping_cli:alternative_quantity_plot_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clumping_factor.forest" = ["data/line_list.txt"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
files = [
    "src/clumping_factor/configuration.py",
    "src/clumping_factor/deposition.py",
    "src/clumping_factor/results.py",
]
